--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/TouringBBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.flatlaf-1.5.jar=lib\\flatlaf-1.5.jar
 file.reference.jandex-1.1.0.Final.jar=lib\\jandex-1.1.0.Final.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.20.jar=lib\\mysql-connector-java-8.0.20.jar
@@ -40,7 +41,8 @@ javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
     ${file.reference.jandex-1.1.0.Final.jar}:\
     ${file.reference.mysql-connector-java-8.0.20.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.flatlaf-1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
